# UniProjects

AlPro/: CMakeLists.txt
AlPro/mensa/: CMakeLists.txt
AlPro/mensa/example/: StudiBeispiel.cpp
AlPro/mensa/include/: Geburtstagsdatum.hpp  Studi.hpp  StudiCmp.hpp
AlPro/mensa/src/: Studi.cpp
AlPro/tests/: CMakeLists.txt  test_tuerme.cpp
AlPro/uebungsblatt_03/: uebungsblatt_03.cpp
AlPro/uebungsblatt_04/: array_task.cpp  von_der_weppen.cpp
AlPro/uebungsblatt_05/: minSort.cpp
AlPro/uebungsblatt_05/hanoi/examples/: demo.cpp
AlPro/uebungsblatt_05/hanoi/include/: tuerme_von_Hanoi.h
AlPro/uebungsblatt_05/hanoi/src/: tuerme_von_Hanoi.cpp
AlPro/uebungsblatt_05/minsort_in_place/examples/: demo.cpp
AlPro/uebungsblatt_05/minsort_in_place/include/: minsort_ip.h
AlPro/uebungsblatt_06/examples/: demo_graph.cpp  demo_laufzeit.cpp  demo_mergesort.cpp
AlPro/uebungsblatt_06/include/: mergesort.h  schnellsort.cpp  simpler_graph.h  zeitmesser.cpp
AlPro/uebungsblatt_06/src/: mergesort.cpp  schnellsort.cpp  simpler_graph.cpp  zeitmesser.cpp
AlPro/uebungsblatt_07/examples/: demo_graph.cpp  task_03.txt
AlPro/uebungsblatt_07/include/: simpler_graph.h
AlPro/uebungsblatt_07/src/: simpler_graph.cpp
AlPro/uebungsblatt_08/: CMakeLists.txt
AlPro/uebungsblatt_08/examples/: aufg1.cpp  aufg2.cpp
AlPro/uebungsblatt_08/src/: binary_tree.cpp  binary_tree_node.cpp  list.cpp  list_node.cpp
AlPro/uebungsblatt_09/: CMakeLists.txt  README.md
AlPro/uebungsblatt_09/examples/: aufg1.cpp  aufg2.cpp  aufg4.cpp
AlPro/uebungsblatt_09/src/: doubly_linked_list.cpp  doubly_linked_list_node.cpp
AlPro/uebungscode_10/: CMakeLists.txt
AlPro/uebungscode_10/examples/: aufg2.cpp  aufg3.cpp
AlPro/uebungscode_10/src/: binarySearchTree.cpp  binary_tree.cpp  binary_tree_node.cpp  hashtable.cpp
AlPro/uebungscode_11/: CMakeLists.txt
AlPro/uebungscode_11/examples/: aufg1.cpp  aufg4_5.cpp
AlPro/uebungscode_11/include/: Studi.hpp
AlPro/uebungscode_11/src/: Studi.cpp  hashtable.cpp
AlPro/uebungscode_12/: CMakeLists.txt
AlPro/uebungscode_12/examples/: Task_03.txt  demo.cpp
AlPro/uebungscode_12/src/: gerichteter_graph.cpp  kante.cpp  knoten.cpp
AlPro/übungsblatt_02/: CMakeLists.txt  uebungscode_02_02.cpp  uebungscode_02_03.cpp
AlPro/übungsblatt_03/: uebungsblatt_03.cpp
AlPro/übungsblatt_05/: Tuerme_von_Hanoi.cpp
(+68 files in other folders)
